Inclui o meu nome

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             </li>
         </ul>
     </div>
+    <p>Versão Criada por Mágno Meira Teodoro</p>
     <script src="script.js"></script>
 </body>
 </html>
